--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <div class="logo" ></div>
-    <div id="main">Loading</div>
+    <div id="root">Loading</div>
 		<script type="module" src="/src/index.jsx"></script>
   </body>
 </html>
